--- a/src/components/NavBar/navBar.module.css
+++ b/src/components/NavBar/navBar.module.css
@@ -33,6 +33,7 @@
         z-index: 10;
     }
 
+
     .menu {
         display: flex;
         flex-direction: column;
@@ -47,7 +48,14 @@
         background-color: #f8f8f8;
         z-index: 10;
         transition: left 1s;
+        opacity: 0.8;
     }
+
+    .navbar a:hover {
+        opacity: 0.5;
+        filter: alpha(opacity=50);
+        zoom: 1;
+      }
 
     .active {
         left: 0;
